--- a/dashboard.html
+++ b/dashboard.html
@@ -57,13 +57,13 @@
         <a href="#"><span>Settings</span></a>
     </div>
 
-    <h1 class="Display-3 text-muted">Dashboard</h1>
+    <h1 class="Display-3 text-dark">Dashboard</h1>
 
     <!-- Table starts  -->
     <div class="container">
-        <table class="table table-striped table-dark">
+        <table class="table table-striped ">
             <thead>
-                <tr>
+                <tr class="bg-dark text-light" id="heading">
                     <th scope="col">Room </th>
                     <th scope="col">Name</th>
                     <th scope="col">Contact</th>
